--- a/style.css
+++ b/style.css
@@ -52,10 +52,23 @@ body {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 .burger {
   display: none;
   flex-direction: column;
-  gap: 6px;
+  gap: 5px;
   border: none;
   background: transparent;
   cursor: pointer;
@@ -72,7 +85,7 @@ body {
 }
 
 .burger.open span:nth-child(1) {
-  transform: rotate(45deg) translate(6px, 6px);
+  transform: rotate(45deg) translate(6px, 5px);
 }
 
 .burger.open span:nth-child(2) {
@@ -80,8 +93,49 @@ body {
 }
 
 .burger.open span:nth-child(3) {
-  transform: rotate(-45deg) translate(6px, -6px);
+  transform: rotate(-45deg) translate(6px, -5px);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.long-section {
+  min-height: 150vh; /* la section est plus grande que la hauteur de l’écran */
+  background: white;
+  color: black;
+  padding: 50px;
+  margin-top:70px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .nav-menu.mobile {
@@ -146,6 +200,16 @@ body {
   color: #4f46e5;
   background-color: rgba(79,70,229,0.2);
 }
+
+
+
+
+
+
+
+
+
+
 
 
 @media(max-width:768px){
